Melhorado a tela de login

--- a/exercicio22-banco-js/index.html
+++ b/exercicio22-banco-js/index.html
@@ -11,7 +11,8 @@
 <body>
   <div class="box">
     <div class="aside-box">
-      <img src="" alt="">
+      <p>Nossa missão</p>
+      <p>Sua satisfação</p>
     </div>
     <div class="login-box">
       <form action="" class="log-in" autocomplete="off">
