Finalizado a página de login

--- a/exercicio22-banco-js/pages/register.html
+++ b/exercicio22-banco-js/pages/register.html
@@ -6,8 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>JSBank | Login</title>
   <script src="./exercicio22-banco-js/index.js" type="modules" defer></script>
-  <link rel="stylesheet" href="./css/style.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
+  <link rel="stylesheet" href="/exercicio22-banco-js/css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,700;1,400&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -17,7 +16,7 @@
       </div>
       <div class="login-box">
         <form action="" class="log-in" autocomplete="off">
-          <button class="title">JSBank</button>
+          <h2>JSBank</h2>
           <p>Insira suas credenciais:</p>
           <div class="floating-label">
             <span class="mail icon"></span>
@@ -26,12 +25,8 @@
           <div class="floating-label">
             <span class="lock icon"></span>
             <input type="password" id="password-input" placeholder="Senha" name="password">
-            <i class="far fa-eye" id="togglePassword"></i>
           </div>
-          <div class="sign-up">
-            <a href="./pages/register.html">Esqueceu a senha?</a>
-            <a href="./pages/register.html">Registre-se</a>
-          </div>
+          <a href="">Esqueceu a senha?</a>
           <button id="login-btn" type="submit" onclick="">Login</button>
         </form>
       </div>
